MCGR: tdf#155479 always propagate SVG-flag for sub-content metafiles

For SVG export it is necessary to always propagate the SVG-flag for
metafiles in *any* case impDumpToMetaFile is used and a new metafile
gets created (aContentMetafile here).
This is due to the subContent again may have any combinations of
gradients/transparenceGradients that are non-vcl-renderable and need
special handling.

Change-Id: I7edee8afa81c0b6f3fb0e183d144c50f29c5bb79
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153645
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>